<resources>
    <string name="app_name">FiTrainer</string>
    <string name="welcome_title">BIENVENUE BRUCE</string>
    <string name="welcome_greetings">NOUS SOMMES CONTENTS DE VOUS REVOIR</string>
    <string name="signUp">Créer un compte</string>
    <string name="signUpInfo">Finaliser</string>
    <string name="name">Nom</string>
    <string name="fname">Prénom</string>
    <string name="birth">Naissance</string>
    <string name="weight">poids</string>
    <string name="height">Taille</string>
    <string name="sex">Sexe</string>
    <string name="condition">Condition</string>
    <string name="questions">Nous avons quelques questions vous concernant</string>
    <string name="connexion">Connexion</string>
    <string name="newtraining">Que voulez vous faire aujourd hui?</string>
    <string name="speed">Vitesse</string>
    <string name="resistance">Resistance</string>
    <string name="moduletime">00:00</string>
    <string name="moduletrmin">60 TR/MIN</string>
    <string name="commencer">Commencer</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="resume">Reprendre</string>
    <string name="finish">Vous avez terminé l entrainement</string>
    <string name="finishPity">Vous n avez pas terminé l entrainement</string>
    <string name="tryAgain">La prochaine foid c est la bonne !!</string>
</resources>