<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartTrainingActivity">


    <SeekBar
        android:id="@+id/intensitySlider2"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:max="100"
        android:progressDrawable="@drawable/intensity_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/modulename"
        style="@style/TextView.Labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Module"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/moduletime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/moduletime"
        style="@style/Widget.AppCompat.TextView.Countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moduletime"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensitySlider2" />

    <TextView
        android:id="@+id/moduletrmin"
        style="@style/TextView.Labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moduletrmin"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moduletime"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_start"
        style="@style/Button.Borderless.OverallStyle"
        android:layout_width="match_parent"
        android:layout_height="96sp"
        android:background="@color/green"
        android:text="@string/commencer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>