<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingFinalActivity">

    <Button
        android:id="@+id/imageViewGradientfinal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:visibility="visible"
        android:background="@drawable/intensity_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@android:drawable/ic_menu_add"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/modulenamefinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGradientfinal"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/moduletimefinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moduletime"
        android:textColor="#000000"
        android:textSize="90sp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modulenamefinal"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/moduletrminfinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moduletrmin"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moduletimefinal"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/buttonplusfinal"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_add_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGradientfinal" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewfinal">


        <Button
            android:id="@+id/buttonplaypause"
            style="@style/Button.Borderless.OverallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3FEF46"
            android:text="@string/resume" />

        <Button
            android:id="@+id/buttonstop"
            style="@style/Button.Borderless.OverallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F44336"
            android:text="@string/stop" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewfinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center"
        android:paddingTop="40dp"
        android:paddingBottom="45dp"
        android:text="EXERCICE FINAL"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>