<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OngoingTrainingActivity">

    <TextView
        android:id="@+id/modulenamebegining"
        style="@style/TextView.Labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/moduletimebegining"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/moduletimebegining"
        style="@style/Widget.AppCompat.TextView.Countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moduletime"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensitySlider" />

    <TextView
        android:id="@+id/moduletrminbegining"
        style="@style/TextView.Labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moduletrmin"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moduletimebegining" />

    <Button
        android:id="@+id/buttonplusbegin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_add_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensitySlider" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayoutProchainBloc">


        <Button
            android:id="@+id/buttonplaypause"
            style="@style/Button.Borderless.OverallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:text="@string/pause" />

        <Button
            android:id="@+id/buttonstop"
            style="@style/Button.Borderless.OverallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F44336"
            android:text="@string/stop" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayoutProchainBloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/labelblocsuivant"
                style="@style/TextView.Labels"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Suivant :"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/blocsuivant"
                android:layout_width="match_parent"
                android:layout_height="120sp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/nomblocsuivant"
                    style="@style/TextView.Labels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/dureeblocsuivant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/dureeblocsuivant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="0:00"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/vitesseblocsuivant"
                    style="@style/TextView.Labels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dureeblocsuivant" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/labelExerciceFinal"
        style="@style/TextView.Labels"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="Exercice final"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tableLayoutProchainBloc"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <SeekBar
        android:id="@+id/intensitySlider"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:max="100"
        android:progressDrawable="@drawable/intensity_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>